--- a/3_통계분석/3_연습문제.ipynb
+++ b/3_통계분석/3_연습문제.ipynb
@@ -117,6 +117,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Region</th>\n",
+       "      <th>Central</th>\n",
+       "      <th>East</th>\n",
+       "      <th>South</th>\n",
+       "      <th>West</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Consumer</th>\n",
+       "      <td>41</td>\n",
+       "      <td>53</td>\n",
+       "      <td>27</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Corporate</th>\n",
+       "      <td>29</td>\n",
+       "      <td>31</td>\n",
+       "      <td>19</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Home Office</th>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Region       Central  East  South  West\n",
+       "Segment                                \n",
+       "Consumer          41    53     27    65\n",
+       "Corporate         29    31     19    29\n",
+       "Home Office       18    22      5    11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.74\n",
+      "9\n",
+      "0.148\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 3\n",
+    "\n",
+    "import pandas as pd \n",
+    "exam3 = pd.read_csv(\"../data/연습문제/고객_등급리스트.csv\")\n",
+    "# print(exam3.head())\n",
+    "\n",
+    "# print(exam3[\"Segment\"].value_counts())\n",
+    "# print(exam3[\"Region\"].value_counts())\n",
+    "\n",
+    "cross = pd.crosstab(exam3[\"Segment\"], exam3[\"Region\"])\n",
+    "display(cross)\n",
+    "\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "stats, pvalue, dof, expected = chi2_contingency(cross)\n",
+    "\n",
+    "# 1\n",
+    "result1 = round(expected[1, 2], 2)\n",
+    "print(result1)\n",
+    "\n",
+    "# 2. \n",
+    "result2 = int(stats)\n",
+    "print(result2)\n",
+    "\n",
+    "# 3. \n",
+    "result3 = round(pvalue, 3)\n",
+    "print(result3)\n",
+    "print(\"채택\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
