--- a/3_통계분석/3_연습문제.ipynb
+++ b/3_통계분석/3_연습문제.ipynb
@@ -234,6 +234,346 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 93 entries, 0 to 92\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Manufacturer        93 non-null     object \n",
+      " 1   Model               93 non-null     object \n",
+      " 2   Type                93 non-null     object \n",
+      " 3   Min_Price           93 non-null     float64\n",
+      " 4   Price               84 non-null     float64\n",
+      " 5   Max_Price           93 non-null     float64\n",
+      " 6   MPG_city            93 non-null     int64  \n",
+      " 7   MPG_highway         93 non-null     int64  \n",
+      " 8   AirBags             59 non-null     object \n",
+      " 9   DriveTrain          93 non-null     object \n",
+      " 10  Cylinders           93 non-null     object \n",
+      " 11  EngineSize          93 non-null     float64\n",
+      " 12  Horsepower          93 non-null     int64  \n",
+      " 13  RPM                 89 non-null     float64\n",
+      " 14  Rev_per_mile        93 non-null     int64  \n",
+      " 15  Man_trans_avail     93 non-null     object \n",
+      " 16  Fuel_tank_capacity  93 non-null     float64\n",
+      " 17  Passengers          93 non-null     int64  \n",
+      " 18  Length              93 non-null     int64  \n",
+      " 19  Wheelbase           93 non-null     int64  \n",
+      " 20  Width               93 non-null     int64  \n",
+      " 21  Turn_circle         80 non-null     float64\n",
+      " 22  Rear_seat_room      91 non-null     float64\n",
+      " 23  Luggage_room        82 non-null     float64\n",
+      " 24  Weight              93 non-null     int64  \n",
+      " 25  Origin              93 non-null     object \n",
+      " 26  Unnamed: 26         93 non-null     int64  \n",
+      " 27  Make                93 non-null     object \n",
+      "dtypes: float64(9), int64(10), object(9)\n",
+      "memory usage: 20.5+ KB\n",
+      "19.05\n",
+      "0.85\n",
+      "0\n",
+      "기각\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 4. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam4 = pd.read_csv(\"../data/연습문제/Cars93.csv\")\n",
+    "\n",
+    "exam4.head()\n",
+    "exam4.info()\n",
+    "exam4.isnull().sum()\n",
+    "exam4[\"Price\"].isnull().sum()\n",
+    "\n",
+    "# 결측치 제거 \n",
+    "Price = exam4[\"Price\"].dropna()\n",
+    "Price.isnull().sum()\n",
+    "\n",
+    "# 1. \n",
+    "avg = Price.mean()\n",
+    "result1 = round(avg, 2)\n",
+    "print(result1)\n",
+    "\n",
+    "\n",
+    "# 2. \n",
+    "from scipy.stats import shapiro\n",
+    "stat, pval = shapiro(Price)\n",
+    "result2 = round(stat, 2)\n",
+    "print(result2)\n",
+    "\n",
+    "# 3. \n",
+    "result3 = round(pval, 4)\n",
+    "print(int(result3))\n",
+    "print(\"기각\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.502\n",
+      "-5.54\n",
+      "0\n",
+      "기각\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 5. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam5 = pd.read_csv(\"../data/연습문제/Cars93.csv\")\n",
+    "\n",
+    "RPM = exam5[\"Rev_per_mile\"]\n",
+    "HP = exam5[\"Horsepower\"]\n",
+    "\n",
+    "# 1. \n",
+    "from scipy.stats import pearsonr\n",
+    "\n",
+    "rho, pval = pearsonr(RPM, HP)\n",
+    "\n",
+    "result1 = round(rho, 3)\n",
+    "print(result1)\n",
+    "\n",
+    "# 2. \n",
+    "import numpy as np\n",
+    "\n",
+    "stat = rho / np.sqrt((1 - rho ** 2) / (len(RPM) - 2))\n",
+    "result2 = round(stat, 2)\n",
+    "print(result2)\n",
+    "\n",
+    "# 3. \n",
+    "result3 = round(pval, 4)\n",
+    "print(int(result3))\n",
+    "\n",
+    "print(\"기각\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.995\n",
+      "-127.496\n",
+      "0.97\n",
+      "            PC1       PC2       PC3       PC4\n",
+      "분산기여율  0.965534  0.027817  0.005800  0.000849\n",
+      "누적기여율  0.965534  0.993352  0.999151  1.000000\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 6. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam6 = pd.read_csv(\"../data/연습문제/USArrests.csv\")\n",
+    "\n",
+    "# print(exam6.head())\n",
+    "\n",
+    "from sklearn.decomposition import PCA \n",
+    "\n",
+    "pca = PCA(4)\n",
+    "a = pca.fit_transform(exam6)\n",
+    "weights = pca.components_\n",
+    "\n",
+    "# print(exam6.columns)\n",
+    "df = pd.DataFrame(weights, index=[\"PC1\", \"PC2\", \"PC3\", \"PC4\"], columns=exam6.columns)\n",
+    "result1 = round(df.iloc[0, 1], 3)\n",
+    "print(result1)\n",
+    "\n",
+    "# 2. \n",
+    "result2 = round(a[33, 0], 3)\n",
+    "print(result2)\n",
+    "\n",
+    "# 3. \n",
+    "\n",
+    "obj = {\n",
+    "    \"분산기여율\": pca.explained_variance_ratio_, \n",
+    "    \"누적기여율\": pca.explained_variance_ratio_.cumsum(), \n",
+    "}\n",
+    "\n",
+    "c = pd.DataFrame(obj, index=[\"PC1\", \"PC2\", \"PC3\", \"PC4\"]).T\n",
+    "result3 = round(c.iloc[0, 0], 2)\n",
+    "print(result3)\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "print(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Price   R-squared:                       0.396\n",
+      "Model:                            OLS   Adj. R-squared:                  0.366\n",
+      "Method:                 Least Squares   F-statistic:                     12.96\n",
+      "Date:                Fri, 04 Oct 2024   Prob (F-statistic):           3.69e-08\n",
+      "Time:                        20:49:28   Log-Likelihood:                -288.33\n",
+      "No. Observations:                  84   AIC:                             586.7\n",
+      "Df Residuals:                      79   BIC:                             598.8\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "const           -2.6152     17.252     -0.152      0.880     -36.954      31.724\n",
+      "Rev_per_mile     0.0016      0.002      0.844      0.401      -0.002       0.005\n",
+      "Weight           0.0023      0.002      1.427      0.158      -0.001       0.005\n",
+      "Length          -0.0210      0.104     -0.203      0.840      -0.227       0.185\n",
+      "EngineSize       5.7126      1.479      3.861      0.000       2.768       8.657\n",
+      "==============================================================================\n",
+      "Omnibus:                       54.602   Durbin-Watson:                   1.203\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              252.601\n",
+      "Skew:                           2.010   Prob(JB):                     1.41e-55\n",
+      "Kurtosis:                      10.485   Cond. No.                     7.98e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.98e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "0.396\n",
+      "0.0023\n",
+      "0.1576\n",
+      "0.0054\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 7. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam7 = pd.read_csv(\"../data/연습문제/Cars93.csv\")\n",
+    "\n",
+    "cols = [\"Rev_per_mile\", \"Weight\", \"Length\", \"EngineSize\", \"Price\"]\n",
+    "exam7[cols].isnull().sum()\n",
+    "\n",
+    "samp = exam7[cols].dropna().copy()\n",
+    "samp.isnull().sum()\n",
+    "\n",
+    "# 1. \n",
+    "import statsmodels.api as sm \n",
+    "\n",
+    "y = samp[\"Price\"]\n",
+    "X = samp[cols[:-1]]\n",
+    "\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "X\n",
+    "y\n",
+    "\n",
+    "model = sm.OLS(y, X)\n",
+    "result = model.fit()\n",
+    "print(result.summary())\n",
+    "\n",
+    "result1 = round(result.rsquared, 3)\n",
+    "print(result1)\n",
+    "\n",
+    "# 2. \n",
+    "result2 = round(result.params[\"Weight\"], 4)\n",
+    "print(result2)\n",
+    "\n",
+    "# 3. \n",
+    "result3 = round(result.pvalues[\"Weight\"], 4)\n",
+    "print(result3)\n",
+    "\n",
+    "# 4. \n",
+    "result4 = round(result.conf_int(alpha=0.05).loc[\"Weight\"][1], 4)\n",
+    "print(result4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Price   R-squared:                       0.396\n",
+      "Model:                            OLS   Adj. R-squared:                  0.366\n",
+      "Method:                 Least Squares   F-statistic:                     12.96\n",
+      "Date:                Fri, 04 Oct 2024   Prob (F-statistic):           3.69e-08\n",
+      "Time:                        20:53:00   Log-Likelihood:                -288.33\n",
+      "No. Observations:                  84   AIC:                             586.7\n",
+      "Df Residuals:                      79   BIC:                             598.8\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "Intercept       -2.6152     17.252     -0.152      0.880     -36.954      31.724\n",
+      "Rev_per_mile     0.0016      0.002      0.844      0.401      -0.002       0.005\n",
+      "Weight           0.0023      0.002      1.427      0.158      -0.001       0.005\n",
+      "Length          -0.0210      0.104     -0.203      0.840      -0.227       0.185\n",
+      "EngineSize       5.7126      1.479      3.861      0.000       2.768       8.657\n",
+      "==============================================================================\n",
+      "Omnibus:                       54.602   Durbin-Watson:                   1.203\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              252.601\n",
+      "Skew:                           2.010   Prob(JB):                     1.41e-55\n",
+      "Kurtosis:                      10.485   Cond. No.                     7.98e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.98e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 7. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam7 = pd.read_csv(\"../data/연습문제/Cars93.csv\")\n",
+    "\n",
+    "cols = [\"Rev_per_mile\", \"Weight\", \"Length\", \"EngineSize\", \"Price\"]\n",
+    "exam7[cols].isnull().sum()\n",
+    "\n",
+    "samp = exam7[cols].dropna().copy()\n",
+    "samp.isnull().sum()\n",
+    "\n",
+    "from statsmodels.formula.api import ols \n",
+    "\n",
+    "formula = \"Price ~ Rev_per_mile + Weight + Length + EngineSize\"\n",
+    "\n",
+    "model = ols(formula, data=samp).fit()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
