--- a/3_통계분석/3_연습문제.ipynb
+++ b/3_통계분석/3_연습문제.ipynb
@@ -574,6 +574,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   No. Observations:                  105\n",
+      "Model:                            GLM   Df Residuals:                      101\n",
+      "Model Family:                Binomial   Df Model:                            3\n",
+      "Link Function:                  Logit   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -56.381\n",
+      "Date:                Fri, 04 Oct 2024   Deviance:                       112.76\n",
+      "Time:                        21:48:48   Pearson chi2:                     106.\n",
+      "No. Iterations:                     4   Pseudo R-squ. (CS):            0.09941\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -0.8077      0.696     -1.160      0.246      -2.173       0.557\n",
+      "x1            -0.6233      0.198     -3.149      0.002      -1.011      -0.235\n",
+      "x2            -0.1575      0.684     -0.230      0.818      -1.498       1.183\n",
+      "x3            -0.2153      0.309     -0.696      0.487      -0.822       0.391\n",
+      "==============================================================================\n",
+      "-0.808\n",
+      "0.854\n",
+      "0.5344\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 8. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam8 = pd.read_csv(\"../data/연습문제/job.csv\")\n",
+    "\n",
+    "exam8['x2']\n",
+    "\n",
+    "\n",
+    "# 라벨 인코딩 (1)\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
+    "# encoder = LabelEncoder()\n",
+    "# encoder.fit(exam8['x2'])\n",
+    "# exam8['x2'] = encoder.transform(exam8['x2'])\n",
+    "\n",
+    "# 라벨인코딩 (2)\n",
+    "exam8['x2'] = exam8['x2'].map({\"M\":1, \"F\":0})\n",
+    "\n",
+    "\n",
+    "# 로지스틱 회귀분석 (1)\n",
+    "import statsmodels.api as sm \n",
+    "\n",
+    "y = exam8['y']\n",
+    "X = exam8[[\"x1\", \"x2\", \"x3\"]]\n",
+    "X = sm.add_constant(X) # 상수항 추가\n",
+    "\n",
+    "model = sm.GLM(y, X, family=sm.families.Binomial()).fit()\n",
+    "print(model.summary())\n",
+    "\n",
+    "# 로지스틱 회귀분석 (2)\n",
+    "# import statsmodels.api as sm \n",
+    "# from statsmodels.formula.api import glm\n",
+    "\n",
+    "# model = glm(\"y ~ x1 + x2 + x3\", data=exam8, family=sm.families.Binomial()).fit()\n",
+    "# print(model.summary())\n",
+    "\n",
+    "\n",
+    "# 1. \n",
+    "result1 = round(model.params[\"const\"], 3)\n",
+    "print(result1)\n",
+    "\n",
+    "# # 2. \n",
+    "import numpy as np \n",
+    "b = model.params[\"x2\"]\n",
+    "result2 = round(np.exp(b), 3)\n",
+    "print(result2)\n",
+    "\n",
+    "# # 3. \n",
+    "\n",
+    "c = model.predict(X)\n",
+    "result3 = round(c[8], 4)\n",
+    "print(result3)\n",
+    "\n",
+    "print(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
