--- a/3_통계분석/3_연습문제.ipynb
+++ b/3_통계분석/3_연습문제.ipynb
@@ -665,6 +665,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 506 entries, 0 to 505\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   번호           506 non-null    int64  \n",
+      " 1   홍보비          506 non-null    float64\n",
+      " 2   제작비          506 non-null    float64\n",
+      " 3   예산           506 non-null    float64\n",
+      " 4   영화길이_분       506 non-null    float64\n",
+      " 5   남자_주연_배우_순위  506 non-null    float64\n",
+      " 6   여_주연_배우_순위   506 non-null    float64\n",
+      " 7   디렉터_순위       506 non-null    float64\n",
+      " 8   프로듀서_순위      506 non-null    float64\n",
+      " 9   비평가_순위       506 non-null    float64\n",
+      " 10  트레일러_뷰수      506 non-null    int64  \n",
+      " 11  3D_가능여부      506 non-null    object \n",
+      " 12  트위터_해시태그_수   506 non-null    float64\n",
+      " 13  장르           506 non-null    object \n",
+      " 14  배우_평균_나이     506 non-null    int64  \n",
+      "dtypes: float64(10), int64(3), object(2)\n",
+      "memory usage: 59.4+ KB\n",
+      "16.542\n",
+      "13.44\n",
+      "0.0038\n",
+      "기각\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 연습문제 9. \n",
+    "\n",
+    "import pandas as pd \n",
+    "exam9 = pd.read_csv(\"../data/연습문제/영화_순위리스트.csv\", encoding=\"CP949\")\n",
+    "\n",
+    "exam9.head()\n",
+    "exam9.info()\n",
+    "exam9[\"장르\"].value_counts()\n",
+    "\n",
+    "genre = exam9[\"장르\"].copy()\n",
+    "budget = exam9[\"예산\"].copy()\n",
+    "\n",
+    "b_Thriler = budget[genre == \"Thriller\"]\n",
+    "b_Comedy = budget[genre == \"Comedy\"]\n",
+    "b_Drama = budget[genre == \"Drama\"]\n",
+    "b_Action = budget[genre == \"Action\"]\n",
+    "\n",
+    "n_i = [\n",
+    " len(b_Thriler), len(b_Comedy), len(b_Drama), len(b_Action),\n",
+    "]\n",
+    "\n",
+    "v_i = [\n",
+    " b_Thriler.var(), b_Comedy.var(), b_Drama.var(), b_Action.var(),\n",
+    "]\n",
+    "\n",
+    "result = 0\n",
+    "for i in range(4):\n",
+    "    j = (n_i[i] - 1) * v_i[i] \n",
+    "    result = result + j\n",
+    "\n",
+    "k = 4 \n",
+    "N = sum(n_i)\n",
+    "\n",
+    "import numpy as np \n",
+    "\n",
+    "a = round(np.log(result / (N - k)), 3)\n",
+    "print(a)\n",
+    "\n",
+    "# 2\n",
+    "\n",
+    "from scipy.stats import bartlett\n",
+    "\n",
+    "b, c = bartlett(\n",
+    " b_Thriler, b_Comedy, b_Drama, b_Action\n",
+    ")\n",
+    "\n",
+    "b = round(b, 2)\n",
+    "print(b)\n",
+    "\n",
+    "\n",
+    "# 3 \n",
+    "\n",
+    "c = round(c, 4)\n",
+    "print(c)\n",
+    "print(\"기각\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
