--- a/4_머신러닝/4-1_지도학습모형/2_성과분석.ipynb
+++ b/4_머신러닝/4-1_지도학습모형/2_성과분석.ipynb
@@ -147,6 +147,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8333333333333334\n",
+      "1.0\n",
+      "0.75\n",
+      "0.8571428571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
+    "\n",
+    "y_true = [0, 0, 0, 1, 1, 1] # 실제값\n",
+    "y_pred = [0, 1, 0, 1, 1, 1] # 예측값\n",
+    "\n",
+    "\n",
+    "# 정확도, 정분류율\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "print(accuracy)\n",
+    "\n",
+    "# 재현율(Reacall)\n",
+    "recall = recall_score(y_true, y_pred)\n",
+    "print(recall)\n",
+    "\n",
+    "# 정밀도\n",
+    "precision = precision_score(y_true, y_pred)\n",
+    "print(precision)\n",
+    "\n",
+    "f1 = f1_score(y_true, y_pred, average=\"macro\")\n",
+    "print(f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.888888888888889\n"
+     ]
+    }
+   ],
+   "source": [
+    "## AUC \n",
+    "\n",
+    "from sklearn.metrics import roc_curve, auc \n",
+    "\n",
+    "\n",
+    "y_true = [0, 0, 0, 1, 1, 1]\n",
+    "y_score = [0.1, 0.75, 0.35, 0.92, 0.81, 0.68]\n",
+    "\n",
+    "fpr, tpr, thresholds = roc_curve(y_true, y_score)\n",
+    "\n",
+    "AUC = auc(fpr, tpr)\n",
+    "\n",
+    "print(AUC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17581754220802784\n",
+      "0.36474003862364796\n",
+      "1.0843148337483364\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, mean_absolute_percentage_error\n",
+    "\n",
+    "import numpy as np \n",
+    "\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "y_true = np.random.random_sample(5)\n",
+    "y_pred = np.random.random_sample(5)\n",
+    "\n",
+    "mse = mean_squared_error(y_true, y_pred)\n",
+    "print(mse)\n",
+    "\n",
+    "mae = mean_absolute_error(y_true, y_pred)\n",
+    "print(mae)\n",
+    "\n",
+    "mape = mean_absolute_percentage_error(y_true, y_pred)\n",
+    "print(mape)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
